<resources>
    <string name="app_name">RespirAPP</string>
    <string name="error_IputOutput">Error de entrada/salida</string>
    <string name="text_info_title">Title</string>
    <string name="info_text_dieta">DIETA</string>
    <string name="info_text_ejercicios">EJERCICIOS</string>
    <string name="info_text_infoepoc">INFORMACIÓN SOBRE LA EPOC</string>
    <string name="info_text_tratamiento">TRATAMIENTO</string>
    <string name="info_text_info" >INFO</string>
    <string name="info_fragment_permiso" >Tiene que habilitar el almacenamiento en la memoria externa</string>
    <string name="info_fragment_permisoDenegado" >Permiso denegado. No podrá ver los vídeos de los inhaladores</string>
    <string name="info_fragment_descarga" >El video se reproducirá cuando se descargue</string>
    <string name="button_back">Volver</string>
    <string name="error_cargarrecursos">Error al cargar el fichero de recursos</string>

    <string name="btn_saludResponde">Salud Responde</string>
    <string name="btn_cuidador">Cuidador o Familiar</string>
    <string name="btn_sintomas">Control Sintomas</string>

    <string name="menu_citasmedicas">Citas Médicas</string>
    <string name="menu_informes">Informes Médicos</string>
    <string name="menu_logros">Logros</string>
    <string name="menu_preferencias">Preferencias</string>

    <string name="interfaz_saludresponde" >LLamando a Salud Responde...</string>
    <string name="interfaz_cuidador">Llamando a...</string>
    <string name="interfaz_sintomas">Control de Sintomas</string>

    <string name="dialog_aceptar">ACEPTAR</string>
    <string name="dialog_cancelar">CANCELAR</string>


    <string name="control_de_sintomas">Control de Síntomas</string>
    <string name="content_description_playvideo">Reproducir vídeo</string>
    <string name="content_description_prevmessage">Mensaje previo</string>
    <string name="content_description_nextmessage">Siguiente mensaje</string>
    <string name="content_description_medicine">Tomar la medicación</string>
    <string name="siguiente">Siguiente</string>
    <string name="controlsintomas_fatiga_maxima">Máxima</string>

    <!-- Fragment hour layout-->
    <string name="fragment_hour_push">Pulse sobre el reloj</string>
    <string name="fragment_hour_wakeup">Indique a qué hora se despierta</string>
    <string name="fragment_hour_startup">Comenzar</string>
    <string name="content_description_clock">Reloj</string>
    <string name="content_description_bed">Cama</string>
</resources>
