<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/fragment_hour_linear_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#4FC3F7">

        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/fragment_hour_wakeup"
            android:layout_weight="0.81" />

        <ImageView
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_man"
            app:layout_anchorGravity="center"
            android:layout_margin="16dp"
            android:layout_gravity="right"
            android:contentDescription="@string/content_description_bed" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4FC3F7"
        android:fontFamily="sans-serif"
        android:text="@string/fragment_hour_startup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button2"
        android:id="@+id/fragment_hour_linear_clock"
        android:layout_below="@+id/fragment_hour_linear_heading"
        android:gravity="center_vertical">
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/clock"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/content_description_clock" />

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:text="@string/fragment_hour_push" />

    </LinearLayout>

</RelativeLayout>