<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epsl.peritos.peritos.fragments.InfoFragment">
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_info_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/InfoFragment" />
    <ScrollView
        android:id="@+id/scroll_caption"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:clickable="false"

        android:layout_below="@+id/txt_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/info_play">

        <TextView
            android:id="@+id/txt_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_text_info"
            android:gravity="center_vertical|center_horizontal"
            style="@style/InfoFragment.Message" />
    </ScrollView>

    <ScrollView
        android:id="@+id/scroll_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:fillViewport="false"
        android:clickable="false"
        android:layout_below="@+id/txt_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/info_play">

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_text_info"
            android:gravity="center_vertical|center_horizontal"
            style="@style/InfoFragment.Message" />
    </ScrollView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_play"

        android:src="@drawable/ic_play_circle"
        android:layout_marginLeft="@dimen/info_play_margin"
        android:layout_marginRight="@dimen/info_play_margin"
        android:contentDescription="@string/content_description_playvideo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>